# laura

./: README.md  TAGS  laura.cabal
app/: Main.hs
resources/: magics.json  testOutput
src/: BitBoard.hs  Board.hs  Evaluation.hs  Magic.hs  Masks.hs  Search.hs  Serialize.hs  Terminal.hs  Trans.hs  UI.hs  Utils.hs
src/Move/: Apply.hs  Generation.hs  Types.hs
test/: Spec.hs
