name:                laura
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/laura#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib, BitBoard, Utils, Move.Types, Move.Generation, Magic,
                       Serialize, Masks, Terminal, Move.Apply, Evaluation, Search,
                       Board, UI, Trans
  build-depends:       base >= 4.7 && < 5, containers >= 0.5, ansi-wl-pprint,
                       vector >= 0.11, unordered-containers, MonadRandom, random,
                       mtl, aeson, bytestring >= 0.10, safe, haskeline >= 0.7,
                       stm, deepseq >= 1.4, hashable >= 1.2, hashtables
  default-extensions:  OverloadedStrings, LambdaCase, TupleSections,
                       GeneralizedNewtypeDeriving, BangPatterns, PatternSynonyms
  default-language:    Haskell2010

executable laura
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , laura
  default-language:    Haskell2010

test-suite laura-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base, criterion 
                     , laura
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/laura
